<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>frostillicus.blog</groupId>
	<artifactId>frostillicus-blog</artifactId>
	<version>3.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>frostillic.us Blog App</name>
	<inceptionYear>2012</inceptionYear>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Jesse Gallagher</name>
			<email>jesse@frostillic.us</email>
		</developer>
	</developers>

	<modules>
		<module>frostillicus-blog-shared</module>
		<module>frostillicus-blog-j2ee</module>
	</modules>

	<properties>
		<DARWINO_VERSION>2.6.0-SNAPSHOT</DARWINO_VERSION>

		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

		<maven-version>3.3.9</maven-version>
		<java-version>${maven.compiler.target}</java-version>
		<jnosql-version>1.0.0.20220620160743</jnosql-version>
	</properties>
	
	<prerequisites>
		<maven>${maven-version}</maven>
	</prerequisites>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>jakarta.platform</groupId>
				<artifactId>jakarta.jakartaee-bom</artifactId>
				<version>9.1.0</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			<dependency>
				<groupId>org.eclipse.microprofile</groupId>
				<artifactId>microprofile</artifactId>
				<version>5.0</version>
				<scope>import</scope>
				<type>pom</type>
			</dependency>
			
			<dependency>
				<groupId>jakarta.mvc</groupId>
				<artifactId>jakarta.mvc-api</artifactId>
				<version>2.1.0</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.krazo</groupId>
				<artifactId>krazo-core</artifactId>
				<version>2.0.2</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.krazo</groupId>
				<artifactId>krazo-resteasy</artifactId>
				<version>2.0.2</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish.web</groupId>
				<artifactId>jakarta.servlet.jsp.jstl</artifactId>
				<version>2.0.0</version>
			</dependency>
			
			<dependency>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok</artifactId>
				<version>1.18.24</version>
			</dependency>
			<dependency>
				<groupId>org.commonmark</groupId>
				<artifactId>commonmark</artifactId>
				<version>0.21.0</version>
			</dependency>
			<dependency>
				<groupId>com.rometools</groupId>
				<artifactId>rome</artifactId>
				<version>1.18.0</version>
			</dependency>
			<dependency>
				<groupId>org.jsoup</groupId>
				<artifactId>jsoup</artifactId>
				<version>1.15.3</version>
			</dependency>
			<dependency>
				<groupId>org.webjars.npm</groupId>
				<artifactId>hotwired__turbo</artifactId>
				<version>7.2.4</version>
			</dependency>
			<dependency>
				<groupId>org.reflections</groupId>
				<artifactId>reflections</artifactId>
				<version>0.10.2</version>
			</dependency>
			
			<dependency>
				<groupId>org.junit.jupiter</groupId>
				<artifactId>junit-jupiter-engine</artifactId>
				<version>5.9.1</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.0.0-M2</version>
				<executions>
					<execution>
						<id>enforce-maven-and-java</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>${maven-version}</version>
								</requireMavenVersion>
								<requireJavaVersion>
									<version>${java-version}</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>io.openliberty.tools</groupId>
				<artifactId>liberty-maven-plugin</artifactId>
				<version>3.7.1</version>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.1.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.0.0-M1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.7.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.2.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>

				<plugin>
					<groupId>com.mycila</groupId>
					<artifactId>license-maven-plugin</artifactId>
					<version>3.0</version>
					<configuration>
						<aggregate>true</aggregate>
						<header>license.txt</header>
						<excludes>
							<exclude>**/pom.xml</exclude>
				            <exclude>**/README</exclude>
				            <exclude>src/test/resources/**</exclude>
				            <exclude>src/main/resources/**</exclude>
						</excludes>
						<properties>
							<owner>Jesse Gallagher</owner>
							<copyrightYear>2022</copyrightYear>
						</properties>
						<mapping>
							<tag>DYNASCRIPT_STYLE</tag>
							<java>SLASHSTAR_STYLE</java>
						</mapping>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	
	<profiles>
	
		<!-- Eclipse wants the qualifiers in MANIFEST.MF to be "qualifier", not the timestamp -->
		<profile>
			<id>m2e-fix</id>
			<activation>
				<property>
					<name>m2e.version</name>
				</property>
			</activation>
			<properties>
				<osgi.qualifier>qualifier</osgi.qualifier>
			</properties>
		</profile>
	</profiles>
	
</project>
